[package]
name = "log_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.6"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_derive = "1.0.209"
serde_regex = "1.0"
futures = { version = "0.3.30", features = ["thread-pool"] }
clap = { version = "4.5.17", features = ["derive"] }
chrono = { version = "0.4.38", features = ["default"] }
